--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<h2>自我介绍</h2>
 				<p>贺超现读于河北科技大学，是一名性格开朗阳光帅气的大三学子。想要了解这位小哥哥请关注他，精彩都在后面</p>
 				<p></p>
-				<img src="img/001.jpg"  width="100%" >
+				<img src="001.jpg"  width="100%" >
 				<p>2019.11.11</p>
 				
 			
